editor/src/java/com/defold/editor/LSPSnippetParser.java
// Generated from LSPSnippet.g4 by ANTLR 4.9.1
package com.defold.editor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LSPSnippetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TEXT=1, ID=2, NL=3, CR=4, INT=5, DOLLAR=6, BACK_SLASH=7, OPEN=8, CLOSE=9, 
		COLON=10, PIPE=11, COMMA=12;
	public static final int
		RULE_snippet = 0, RULE_text = 1, RULE_text_esc = 2, RULE_err = 3, RULE_syntax_rule = 4, 
		RULE_newline = 5, RULE_tab_stop = 6, RULE_naked_tab_stop = 7, RULE_curly_tab_stop = 8, 
		RULE_placeholder = 9, RULE_placeholder_content = 10, RULE_placeholder_text = 11, 
		RULE_placeholder_esc = 12, RULE_choice = 13, RULE_choice_elements = 14, 
		RULE_choice_element = 15, RULE_choice_text = 16, RULE_choice_esc = 17, 
		RULE_variable = 18, RULE_variable_text = 19, RULE_naked_variable = 20, 
		RULE_curly_variable = 21, RULE_placeholder_variable = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"snippet", "text", "text_esc", "err", "syntax_rule", "newline", "tab_stop", 
			"naked_tab_stop", "curly_tab_stop", "placeholder", "placeholder_content", 
			"placeholder_text", "placeholder_esc", "choice", "choice_elements", "choice_element", 
			"choice_text", "choice_esc", "variable", "variable_text", "naked_variable", 
			"curly_variable", "placeholder_variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'\r'", null, "'$'", "'\\'", "'{'", "'}'", "':'", 
			"'|'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TEXT", "ID", "NL", "CR", "INT", "DOLLAR", "BACK_SLASH", "OPEN", 
			"CLOSE", "COLON", "PIPE", "COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LSPSnippet.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LSPSnippetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SnippetContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<Text_escContext> text_esc() {
			return getRuleContexts(Text_escContext.class);
		}
		public Text_escContext text_esc(int i) {
			return getRuleContext(Text_escContext.class,i);
		}
		public List<Syntax_ruleContext> syntax_rule() {
			return getRuleContexts(Syntax_ruleContext.class);
		}
		public Syntax_ruleContext syntax_rule(int i) {
			return getRuleContext(Syntax_ruleContext.class,i);
		}
		public List<ErrContext> err() {
			return getRuleContexts(ErrContext.class);
		}
		public ErrContext err(int i) {
			return getRuleContext(ErrContext.class,i);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public SnippetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_snippet; }
	}

	public final SnippetContext snippet() throws RecognitionException {
		SnippetContext _localctx = new SnippetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_snippet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << ID) | (1L << NL) | (1L << CR) | (1L << INT) | (1L << DOLLAR) | (1L << BACK_SLASH) | (1L << OPEN) | (1L << CLOSE) | (1L << COLON) | (1L << PIPE) | (1L << COMMA))) != 0)) {
				{
				setState(51);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(46);
					text();
					}
					break;
				case 2:
					{
					setState(47);
					text_esc();
					}
					break;
				case 3:
					{
					setState(48);
					syntax_rule();
					}
					break;
				case 4:
					{
					setState(49);
					err();
					}
					break;
				case 5:
					{
					setState(50);
					newline();
					}
					break;
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(LSPSnippetParser.TEXT, 0); }
		public TerminalNode ID() { return getToken(LSPSnippetParser.ID, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==TEXT || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Text_escContext extends ParserRuleContext {
		public List<TerminalNode> BACK_SLASH() { return getTokens(LSPSnippetParser.BACK_SLASH); }
		public TerminalNode BACK_SLASH(int i) {
			return getToken(LSPSnippetParser.BACK_SLASH, i);
		}
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public Text_escContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text_esc; }
	}

	public final Text_escContext text_esc() throws RecognitionException {
		Text_escContext _localctx = new Text_escContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_text_esc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(BACK_SLASH);
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==DOLLAR || _la==BACK_SLASH) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode BACK_SLASH() { return getToken(LSPSnippetParser.BACK_SLASH, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode CLOSE() { return getToken(LSPSnippetParser.CLOSE, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public TerminalNode COLON() { return getToken(LSPSnippetParser.COLON, 0); }
		public TerminalNode PIPE() { return getToken(LSPSnippetParser.PIPE, 0); }
		public TerminalNode COMMA() { return getToken(LSPSnippetParser.COMMA, 0); }
		public ErrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_err; }
	}

	public final ErrContext err() throws RecognitionException {
		ErrContext _localctx = new ErrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_err);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DOLLAR) | (1L << BACK_SLASH) | (1L << OPEN) | (1L << CLOSE) | (1L << COLON) | (1L << PIPE) | (1L << COMMA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Syntax_ruleContext extends ParserRuleContext {
		public Tab_stopContext tab_stop() {
			return getRuleContext(Tab_stopContext.class,0);
		}
		public PlaceholderContext placeholder() {
			return getRuleContext(PlaceholderContext.class,0);
		}
		public ChoiceContext choice() {
			return getRuleContext(ChoiceContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Syntax_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax_rule; }
	}

	public final Syntax_ruleContext syntax_rule() throws RecognitionException {
		Syntax_ruleContext _localctx = new Syntax_ruleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_syntax_rule);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				tab_stop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				placeholder();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				choice();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewlineContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(LSPSnippetParser.NL, 0); }
		public TerminalNode CR() { return getToken(LSPSnippetParser.CR, 0); }
		public NewlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newline; }
	}

	public final NewlineContext newline() throws RecognitionException {
		NewlineContext _localctx = new NewlineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_newline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !(_la==NL || _la==CR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tab_stopContext extends ParserRuleContext {
		public Naked_tab_stopContext naked_tab_stop() {
			return getRuleContext(Naked_tab_stopContext.class,0);
		}
		public Curly_tab_stopContext curly_tab_stop() {
			return getRuleContext(Curly_tab_stopContext.class,0);
		}
		public Tab_stopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tab_stop; }
	}

	public final Tab_stopContext tab_stop() throws RecognitionException {
		Tab_stopContext _localctx = new Tab_stopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tab_stop);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				naked_tab_stop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				curly_tab_stop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Naked_tab_stopContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public Naked_tab_stopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_naked_tab_stop; }
	}

	public final Naked_tab_stopContext naked_tab_stop() throws RecognitionException {
		Naked_tab_stopContext _localctx = new Naked_tab_stopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_naked_tab_stop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(DOLLAR);
			setState(76);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Curly_tab_stopContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public TerminalNode CLOSE() { return getToken(LSPSnippetParser.CLOSE, 0); }
		public Curly_tab_stopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_curly_tab_stop; }
	}

	public final Curly_tab_stopContext curly_tab_stop() throws RecognitionException {
		Curly_tab_stopContext _localctx = new Curly_tab_stopContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_curly_tab_stop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(DOLLAR);
			setState(79);
			match(OPEN);
			setState(80);
			match(INT);
			setState(81);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlaceholderContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public TerminalNode COLON() { return getToken(LSPSnippetParser.COLON, 0); }
		public Placeholder_contentContext placeholder_content() {
			return getRuleContext(Placeholder_contentContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(LSPSnippetParser.CLOSE, 0); }
		public PlaceholderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placeholder; }
	}

	public final PlaceholderContext placeholder() throws RecognitionException {
		PlaceholderContext _localctx = new PlaceholderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_placeholder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(DOLLAR);
			setState(84);
			match(OPEN);
			setState(85);
			match(INT);
			setState(86);
			match(COLON);
			setState(87);
			placeholder_content();
			setState(88);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Placeholder_contentContext extends ParserRuleContext {
		public List<Syntax_ruleContext> syntax_rule() {
			return getRuleContexts(Syntax_ruleContext.class);
		}
		public Syntax_ruleContext syntax_rule(int i) {
			return getRuleContext(Syntax_ruleContext.class,i);
		}
		public List<Placeholder_textContext> placeholder_text() {
			return getRuleContexts(Placeholder_textContext.class);
		}
		public Placeholder_textContext placeholder_text(int i) {
			return getRuleContext(Placeholder_textContext.class,i);
		}
		public List<Placeholder_escContext> placeholder_esc() {
			return getRuleContexts(Placeholder_escContext.class);
		}
		public Placeholder_escContext placeholder_esc(int i) {
			return getRuleContext(Placeholder_escContext.class,i);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public Placeholder_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placeholder_content; }
	}

	public final Placeholder_contentContext placeholder_content() throws RecognitionException {
		Placeholder_contentContext _localctx = new Placeholder_contentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_placeholder_content);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << ID) | (1L << NL) | (1L << CR) | (1L << INT) | (1L << DOLLAR) | (1L << BACK_SLASH) | (1L << OPEN) | (1L << COLON) | (1L << PIPE) | (1L << COMMA))) != 0)) {
				{
				setState(94);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DOLLAR:
					{
					setState(90);
					syntax_rule();
					}
					break;
				case TEXT:
				case ID:
				case INT:
				case OPEN:
				case COLON:
				case PIPE:
				case COMMA:
					{
					setState(91);
					placeholder_text();
					}
					break;
				case BACK_SLASH:
					{
					setState(92);
					placeholder_esc();
					}
					break;
				case NL:
				case CR:
					{
					setState(93);
					newline();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Placeholder_textContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(LSPSnippetParser.TEXT, 0); }
		public TerminalNode ID() { return getToken(LSPSnippetParser.ID, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode COLON() { return getToken(LSPSnippetParser.COLON, 0); }
		public TerminalNode PIPE() { return getToken(LSPSnippetParser.PIPE, 0); }
		public TerminalNode COMMA() { return getToken(LSPSnippetParser.COMMA, 0); }
		public Placeholder_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placeholder_text; }
	}

	public final Placeholder_textContext placeholder_text() throws RecognitionException {
		Placeholder_textContext _localctx = new Placeholder_textContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_placeholder_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << ID) | (1L << INT) | (1L << OPEN) | (1L << COLON) | (1L << PIPE) | (1L << COMMA))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Placeholder_escContext extends ParserRuleContext {
		public List<TerminalNode> BACK_SLASH() { return getTokens(LSPSnippetParser.BACK_SLASH); }
		public TerminalNode BACK_SLASH(int i) {
			return getToken(LSPSnippetParser.BACK_SLASH, i);
		}
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode CLOSE() { return getToken(LSPSnippetParser.CLOSE, 0); }
		public Placeholder_escContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placeholder_esc; }
	}

	public final Placeholder_escContext placeholder_esc() throws RecognitionException {
		Placeholder_escContext _localctx = new Placeholder_escContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_placeholder_esc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(BACK_SLASH);
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOLLAR) | (1L << BACK_SLASH) | (1L << CLOSE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChoiceContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(LSPSnippetParser.DOLLAR, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public List<TerminalNode> PIPE() { return getTokens(LSPSnippetParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(LSPSnippetParser.PIPE, i);
		}
		public Choice_elementsContext choice_elements() {
			return getRuleContext(Choice_elementsContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(LSPSnippetParser.CLOSE, 0); }
		public ChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice; }
	}

	public final ChoiceContext choice() throws RecognitionException {
		ChoiceContext _localctx = new ChoiceContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_choice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(DOLLAR);
			setState(105);
			match(OPEN);
			setState(106);
			match(INT);
			setState(107);
			match(PIPE);
			setState(108);
			choice_elements();
			setState(109);
			match(PIPE);
			setState(110);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Choice_elementsContext extends ParserRuleContext {
		public List<Choice_elementContext> choice_element() {
			return getRuleContexts(Choice_elementContext.class);
		}
		public Choice_elementContext choice_element(int i) {
			return getRuleContext(Choice_elementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LSPSnippetParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LSPSnippetParser.COMMA, i);
		}
		public Choice_elementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice_elements; }
	}

	public final Choice_elementsContext choice_elements() throws RecognitionException {
		Choice_elementsContext _localctx = new Choice_elementsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_choice_elements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << ID) | (1L << NL) | (1L << CR) | (1L << INT) | (1L << BACK_SLASH) | (1L << OPEN) | (1L << COLON))) != 0)) {
				{
				setState(112);
				choice_element();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(113);
					match(COMMA);
					setState(114);
					choice_element();
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Choice_elementContext extends ParserRuleContext {
		public List<Choice_textContext> choice_text() {
			return getRuleContexts(Choice_textContext.class);
		}
		public Choice_textContext choice_text(int i) {
			return getRuleContext(Choice_textContext.class,i);
		}
		public List<Choice_escContext> choice_esc() {
			return getRuleContexts(Choice_escContext.class);
		}
		public Choice_escContext choice_esc(int i) {
			return getRuleContext(Choice_escContext.class,i);
		}
		public List<NewlineContext> newline() {
			return getRuleContexts(NewlineContext.class);
		}
		public NewlineContext newline(int i) {
			return getRuleContext(NewlineContext.class,i);
		}
		public Choice_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice_element; }
	}

	public final Choice_elementContext choice_element() throws RecognitionException {
		Choice_elementContext _localctx = new Choice_elementContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_choice_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXT:
				case ID:
				case INT:
				case OPEN:
				case COLON:
					{
					setState(122);
					choice_text();
					}
					break;
				case BACK_SLASH:
					{
					setState(123);
					choice_esc();
					}
					break;
				case NL:
				case CR:
					{
					setState(124);
					newline();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT) | (1L << ID) | (1L << NL) | (1L << CR) | (1L << INT) | (1L << BACK_SLASH) | (1L << OPEN) | (1L << COLON))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Choice_textContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(LSPSnippetParser.TEXT, 0); }
		public TerminalNode ID() { return getToken(LSPSnippetParser.ID, 0); }
		public TerminalNode INT() { return getToken(LSPSnippetParser.INT, 0); }
		public TerminalNode OPEN() { return getToken(LSPSnippetParser.OPEN, 0); }
		public TerminalNode COLON() { return getToken(LSPSnippetParser.COLON, 0); }
		public Choice_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_choice_text; }
	}
